--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -14,7 +14,7 @@
 #  image/me/me.jpg        Accessed through img.php.
 #  image/me/me.jpg?w=300  Using options to img.php.
 #
-RewriteEngine on
+#RewriteEngine on
 
 # /image/
 #RewriteRule ^image/(.*)$        cimage/imgd.php?src=$1 [QSA,NC,L]
@@ -24,7 +24,7 @@ RewriteEngine on
 #RewriteRule ^f/([0-9]+)$ /forum/viewtopic.php?p=$1#p$1 [NE,R=301,L]
 
 # Rewrite to frontcontroller
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
+#RewriteCond %{REQUEST_FILENAME} !-f
+#RewriteCond %{REQUEST_FILENAME} !-d
 
-RewriteRule (.*) index.php/$1 [NC,L]
+#RewriteRule (.*) index.php/$1 [NC,L]
