--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
     website: &website
-        image: anax/dev
+        image: anax/dev:latest-apache
         ports:
             - "8080:80"
         volumes:
