--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: "3"
 services:
     website: &website
-        image: anax/dev:latest-apache
+        #image: anax/dev:latest-apache
+        #image: anax/dev:php74-apache
+        image: anax/dev:php73-apache
         ports:
             - "8080:80"
         volumes:
