Prepare to build enhanced docker container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,17 +7,15 @@ services:
         ports:
             - "8080:80"
         volumes:
+            # Mount these
             - .:/app
             - ./config/docker/dbwebb.se.conf:/etc/apache2/sites-enabled/000-default.conf
+
+            # Do not mount these
+            - /app/vendor
     cli:
         #image: anax/dev:latest-apache
         #image: anax/dev:php74-apache
         image: anax/dev:php73-cli
         volumes:
             - .:/home/anax/repo
-    php70:
-        <<: *website
-        image: anax/dev:php70-apache
-    php56:
-        <<: *website
-        image: anax/dev:php56-apache
