--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,19 +3,21 @@ services:
     website: &website
         #image: anax/dev:latest-apache
         #image: anax/dev:php74-apache
-        image: anax/dev:php73-apache
+        #image: anax/dev:php73-apache
+        image: dbwebb/website:all
         ports:
             - "8080:80"
         volumes:
-            # Mount these
+            # Mount these from your cloned repo
             - .:/app
             - ./config/docker/dbwebb.se.conf:/etc/apache2/sites-enabled/000-default.conf
 
-            # Do not mount these
+            # Do not mount these, use the ones exiting in the container
             - /app/vendor
     cli:
         #image: anax/dev:latest-apache
         #image: anax/dev:php74-apache
-        image: anax/dev:php73-cli
+        #image: anax/dev:php73-cli
+        image: dbwebb/website:all
         volumes:
             - .:/home/anax/repo
