(A, mos) Utkast inför ht20.

--- a/config/docker/dbwebb.se.conf
+++ b/config/docker/dbwebb.se.conf
@@ -1,5 +1,6 @@
 Define site dbwebb.se
 
+ServerName ${site}
 #Define pathSite /home/mos/htdocs/${site}
 Define pathSite /app
 
@@ -13,7 +14,7 @@ ServerAdmin mos@dbwebb.se
 
 	Include ${pathSite}/config/apache-env
 	Include ${pathSite}/config/apache-redirects
-	Include ${pathSite}/config/apache-rewrites 
+	Include ${pathSite}/config/apache-rewrites
 
 	<Directory />
 
@@ -38,8 +39,8 @@ ServerAdmin mos@dbwebb.se
 	</Directory>
 
 	<FilesMatch "\.(jpe?g|png|gif|js|css|svg|ttf|otf|eot|woff|woff2|ico)>
-		ExpiresActive On
-		ExpiresDefault "access plus 1 week"
+		#ExpiresActive On
+		#ExpiresDefault "access plus 1 week"
 	</FilesMatch>
 
 	#LogLevel alert rewrite:trace6
